added jwt tokens authentication
